fix the avatar on mobile

--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@ header {
 	display: flex;
 	height: 100vh;
 	justify-content: center;
+	height: fit-content;
+	background-color: #000;
 	/*background: url("img/markus-spiske-qjnAnF0jIGk-unsplash.jpg") no-repeat center;
 	background-size: cover;*/
 	/*filter: blur(6px) contrast(120%) saturate(120%);*/
@@ -144,7 +146,7 @@ footer {
 	z-index: 1;
 }
 .ava {
-	width: 	auto;
+	max-width: 	100%;
 	height: 100%;
 	overflow: hidden;
 }
